--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -39,6 +39,7 @@ footer {
    .page-footer__wrapper {
       width: 100%;
       display: flex;
+      align-items: baseline;
       justify-content: space-around;
    }
 }
