--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -8,11 +8,6 @@
    display: flex;
    align-items: center;
    justify-content: space-between;
-   padding: 16px 15px;
-
-   @media (min-width: 768px) {
-      padding: 0;
-   }
 }
 
 .page-header__menu {
@@ -90,7 +85,15 @@
 
 @media screen and (min-width: 1200px) {
    .page-header__contact-item:not(:last-child) {
+      margin-bottom: 10px;
       margin-right: 50px;
+   }
+}
+
+@media screen and (min-width: 1200px) {
+   .page-header__contact-item:not(:last-child) {
+      margin-right: 50px;
+      margin-bottom: 0;
    }
 }
 
@@ -102,9 +105,7 @@
    line-height: 1.16;
    letter-spacing: 0.02em;
    color: var(--text-grey-color);
-   
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   margin-bottom: 10px;
 
    &:hover,
    &:focus {
@@ -114,7 +115,6 @@
    @media screen and (min-width: 1200px) {
       font-size: 14px;
       line-height: 1.14;
-      margin-bottom: 0;
    }
 }
 
