--- a/sass/layout/main/_regular-customers.scss
+++ b/sass/layout/main/_regular-customers.scss
@@ -1,9 +1,7 @@
 .regular-customers__list {
-   width: 100%;
    display: flex;
    flex-wrap: wrap;
-   margin-left: -15px;
-   margin-bottom: -30px;
+   gap: var(--card-set-gap);
    justify-content: center;
    align-items: center;
 }
@@ -11,9 +9,8 @@
 
 
 .regular-customers__item {
-   margin-left: 30px;
+   gap: var(--card-set-gap);
    flex-basis: calc(100% / 2 - 30px);
-   margin-bottom: 30px;
 
    @media screen and (min-width: 768px) {
       flex-basis: calc(100% / 3 - 30px);
